- Updated German localization - Built German help file - FolderItem: Uncommented lines that was preventing shortcuts from launching - Create BuildAll.ahk, which build all the files required for a release -
git-svn-id: https://appetizer.googlecode.com/svn@184 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Help/en/appetizer_help.po
+++ b/trunk/Data/Help/en/appetizer_help.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Appetizer Help\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-10 22:13+0000\n"
+"POT-Creation-Date: 2008-11-12 23:57+0000\n"
 "PO-Revision-Date: 2008-11-09 18:36-0000\n"
 "Last-Translator: Laurent Cozic\n"
 "Language-Team: Appetizer Project\n"
@@ -31,8 +31,9 @@ msgid ""
 "applications and other shortcuts. Currently it is possible to add "
 "executables, documents and folders to the dock. Additionally, if you use "
 "Appetizer on a USB key in the [http://portableapps.com PortableApps] format, "
-"the application will detect it and automatically add all your applications "
-"along with the 'Documents', 'Videos', 'Music' and 'Pictures' folders."
+"the application will detect it and automatically import all your "
+"applications along with the 'Documents', 'Videos', 'Music' and 'Pictures' "
+"folders."
 msgstr ""
 
 #: generate_help\main.cpp:117
